--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 }
 
 .App-background {
-  background-color: lightblue;
+  /* background-color: lightblue; */
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -49,4 +49,155 @@
 .navbar-shown {
   opacity: 1;
   transition: opacity 0.5s ease-in-out;
+}
+
+
+.box {
+  height: 100px;
+  width: 100px;
+}
+
+.box-image{
+  height: 50px;
+  width: 50px;
+}
+
+/* App.css */
+
+.card-container {
+  position: relative;
+  overflow: hidden;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.card-container:hover {
+  transform: scale(1.05);
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+}
+
+.card-container .card {
+  position: relative;
+  transition: transform 0.3s ease;
+}
+
+.card-container .card img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
+.card-name {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: white;
+  text-align: center;
+  padding: 10px;
+  font-size: 1rem;
+  transition: opacity 0.3s ease;
+  opacity: 0;
+  pointer-events: none;
+}
+
+.card-container:hover .card-name {
+  opacity: 1;
+}
+
+
+.honeypot {
+  display: none; /* Hide honeypot field */
+}
+
+
+
+/* App.css */
+
+/* Layout for the contact page */
+.contact-page {
+  display: grid;
+  grid-template-columns: 35% 65%;
+  gap: 20px; /* Space between the columns */
+  padding: 20px;
+  max-width: 1200px; /* Restrict the maximum width */
+  margin: 0 auto; /* Center the layout */
+}
+
+.contact-details {
+  background-color: #f4f4f4;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.contact-details h2 {
+  margin-top: 0;
+}
+
+.contact-details ul {
+  list-style-type: disc;
+  padding-left: 20px;
+}
+
+.contact-details li {
+  margin-bottom: 10px;
+}
+
+.contact-form-wrapper {
+  background-color: #ffffff;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.contact-form-title {
+  text-align: center;
+  margin-bottom: 20px;
+  font-size: 2rem;
+  color: #333;
+}
+
+.form-group {
+  margin-bottom: 15px;
+}
+
+.form-group label {
+  display: block;
+  margin-bottom: 5px;
+  font-weight: bold;
+}
+
+.form-group .form-control {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 1rem;
+}
+
+.form-group .error {
+  color: #d9534f;
+  font-size: 0.875rem;
+}
+
+.submit-button {
+  width: 100%;
+  padding: 10px;
+  border: none;
+  border-radius: 4px;
+  background-color: #007bff;
+  color: white;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.submit-button:hover {
+  background-color: #0056b3;
+}
+
+/* Honeypot field styling */
+.honeypot {
+  display: none; /* Hide honeypot field from view */
 }
